      Previously, it would return all matches.  (CNY-1881)

  o Build Changes:
    * Filesets now accept macros. (CNY-148)
    * crossRequires are now ignored when not cross compiling. (CNY-1950)
    * Malformed .jar files are now ignored when computing Java
      dependencies.  Previously, Conary exited with an error while
      attempting to process them. (CNY-1983)

  o Client Changes:
    * The cvc promote and clone commands are now more efficient and do
      not download unnecessary packages.  This also makes it possible
      to clone packages where access to some of the included troves
      is unavailable at the time of the promote or clone operation.
      (CNY-1913)
    * A bug which prevented the mirror client from using hidden commits
      when mirroring to a single target has been fixed. (CNY-1981)
    * Filesets are now cloneable. (CNY-1297)

  o Server Changes
    * A bug which triggered an exception while migrating postgresql
      repositories has been fixed. (CNY-1912)

Changes in 1.1.92:
  o Bug Fixes:
    * ccs2tar correctly handles changesets with duplicate contents and
      hard links. (CNY-1953)
    * An error in the way attributes of ServerProxy classes get
      marshaled has been fixed. (CNY-1956)
    * If local flags (e.g. kernel.smp) are defined in /etc/conary/use,
      cooking no longer produces a traceback. (CNY-1963)
    * The last trove source in a trove source stack is now properly
      passed flavor information. (CNY-1969)
    * Derived packages properly handle files that were not flavored due
      to an exception in the upstream packages. (CNY-1954)
    * The transport layer is automatically encoding non-ASCII strings
      into XMLRPC Binary objects. (CNY-1932)
    * An error that was causing warnings to be printed while cooking
      groups has been fixed. (CNY-1957)

  o Server Changes
    * A bug which triggered an exception while migrating postgresql
      repositories has been fixed. (CNY-1912)

  o Build Changes: